<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    tools:context=".GameWindow">

    <TextView
        android:id="@+id/expression2"
        android:layout_width="117dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/exp1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toEndOf="@+id/Expression1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/Gbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/greater"
        app:layout_constraintBaseline_toBaselineOf="@+id/Eqbtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Eqbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/Lbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/less"
        app:layout_constraintBaseline_toBaselineOf="@+id/Eqbtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Expression1"
        android:layout_width="108dp"
        android:layout_height="20dp"
        android:text="@string/exp2"
        android:textColor="#100F0F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/EvaluvateTxt"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginBottom="180dp"
        android:textColor="#1C1B1B"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="382dp"
        android:layout_height="15dp"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/pointsTxt"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:background="#FAF3F5"
        android:text="TextView"
        android:textColor="#10C818"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="108dp" />
</androidx.constraintlayout.widget.ConstraintLayout>